2003/11/11 10:40 (-0500) rwmcfa1

	* GClosure.xs, gperl_marshal.h: yeah, that wasn't the right way to
	handle that.  i forgot the update the non-PERL_IMPLICIT_CONTEXT side
	of the #ifdef when adding the second arg.  backed out the change to
	GClosure.xs, fixed gperl_marshal.h.

2003/11/11 10:40 (-0500) rwmcfa1
	
	* GClosure.xs: if PERL_IMPLICIT_CONTEXT is not defined then the call 
	to the macro GPERL_CLOSURE_MARSHAL_INIT has the wrong number of 
	prarameters. there's probably a better way to handle this, buf for
	now this will allow things to compile.

2003/11/11 00:36 (-0500) muppetman

	* MANIFEST, debian/*: remove the debian packaging files, since having
	them in the upstream dist makes it difficult for the maintainers

2003/11/10 13:12 (-0500) muppetman

	* gperl_marshal.h: new file
	* GClosure.xs, MANIFEST, Makefile.PL: use and install new file.
	Since client code may install custom marshallers, it is a good idea
	to provide some macros to tidy up the error-prone boilerplate that
	needs to go into each of those marshallers.  gperl_marshal.h is
	installed to the same place as gperl.h, but not #included by default,
	and should be #included whereever you implement a custom marshaller.
	it is loaded with commentary and an example marshaller skeleton.

	* GSignal.xs: update commentary on gperl_signal_set_marshaller_for()
	to pointer binding authors to gperl_marshal.h for guidance.

2003/11/10 01:54 (-0500) muppetman

	* GenPod.pm: be a little smarter about enums and flags package names.

2003/11/09 22:59 (-0500) rwmcfa1

	* GenPod.pm: improved the logic for placement of the no methods exist
	message, moved it to podify_methods.

2003/11/09 22:30 (-0500) rwmcfa1

	* ParseXSDoc.pm: allow the (Object::To::Doc) construct in =for object
	directives.

	* GenPod.pm: support the new object directive allowing files to be 
	named independantly from the objects documented in them.

2003/11/10 00:59 pcg

	* Glib.pm, GType.pm: implement == and eq for flags, the latter